--- a/plotter/index.html
+++ b/plotter/index.html
@@ -30,7 +30,13 @@
           zoom: 2,
           minZoom: 2,
           zoomControl: false,
-    scaleControl: true
+    scaleControl: true,
+     mapTypeControl: false,
+      draggable: false,
+      scaleControl: false,
+      scrollwheel: false,
+      navigationControl: false,
+      streetViewControl: false
         });
       }
     </script>
